--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,6 @@
 	<html>
 		<head>
 			<title>{{ page.title }}</title>
-			
 			<!-- link to main stylesheet -->
 			<link rel="stylesheet" type="text/css" href="/css/main.css">
 		</head>
@@ -22,8 +21,8 @@
 			</div><!-- /.container -->
 			<footer>
 	    		<ul>
-	        			<li><a href="mailto:justineclarke_2017@depauw.edu">email</a></li>
-        		<li><a href="https://github.com/jussic">github.com/jussic</a></li>
+	        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
+	        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
 				</ul>
 			</footer>
 		</body>
